--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
                   context: .
                   file: ./Dockerfile
                   push: true
-                  tags: ${{ secrets.DOCKERHUB_USERNAME }}/testdeployyd:latest
+                  tags: ${{ secrets.DOCKERHUB_USERNAME }}/youdrive:latest
