--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "jest.config.js"],
   "exclude": ["node_modules", "dist"]
 }
