--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.600.0",
+    "@aws-sdk/client-rekognition": "^3.600.0",
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.600.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.3.8",
@@ -32,10 +36,12 @@
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.8",
     "@owsas/nominatim-js": "^1.0.1",
     "@types/multer": "^1.4.11",
+    "aws-sdk": "^2.1648.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "buffer-to-stream": "^1.0.0",
@@ -48,6 +54,7 @@
     "fuse.js": "^7.0.0",
     "google-auth-library": "^9.10.0",
     "handlebars": "^4.7.8",
+    "leo-profanity": "^1.7.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
